Modal - Profile resize issue on tablet solved

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -711,7 +711,7 @@ ul.products li {
   .modal-dialog{
     height: 90%;
     @media screen and (orientation:portrait){
-      height: 65%;
+      height: auto;
       width: 700px;
     }
     .modal-content{
